# rik

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
controller/: .env  Cargo.toml
controller/service/: rik-controller.service
controller/src/: api.rs  logger.rs  main.rs  tools.rs
controller/src/api/: external.rs  internal.rs  mod.rs
controller/src/api/internal/: mod.rs
controller/src/api/types/: element.rs  instance.rs  mod.rs  tenant.rs  workload.rs
controller/src/database/: mod.rs
controller/src/database/data/: rick.db
docs/proposals/scheduler/: README.md
docs/rep/cli/: README.md
docs/rep/controller/: Cargo.toml
docs/rep/controller/src/: main.rs  tools.rs
docs/rep/controller/src/api/: external.rs  internal.rs
node-metrics/: Cargo.toml  README.md
node-metrics/examples/: simple.rs
node-metrics/src/: lib.rs
node_metrics/: Cargo.toml
node_metrics/examples/: simple.rs
node_metrics/src/: lib.rs  metrics.rs
proto/: Cargo.toml  common.proto  controller.proto  controller_scheduler.proto  messages.proto  scheduler_controller.proto  scheduler_worker.proto  worker.proto  worker_scheduler.proto
proto/src/: common.proto  controller.proto  lib.rs
riklet/: Cargo.toml  Dev.Dockerfile
riklet/crates/command/: Cargo.toml
riklet/crates/command/src/: command.rs  lib.rs  skopeo.rs
riklet/crates/daemon/: Cargo.toml
riklet/crates/daemon/src/: client.rs
riklet/crates/runner/: Cargo.toml
riklet/crates/runner/src/: image.rs  image_manager.rs  lib.rs  oci.rs
riklet/service/: riklet.service
riklet/src/: config.rs  core.rs  main.rs  riklet.rs  structs.rs
riklet/src/crates/command/: Cargo.toml
riklet/src/crates/command/src/: binary.rs  lib.rs  runc.rs  skopeo.rs  umoci.rs
riklet/src/crates/cri/: Cargo.toml
riklet/src/crates/cri/src/: console.rs  container.rs  lib.rs
riklet/src/crates/daemon/: Cargo.toml
riklet/src/crates/oci/: Cargo.toml
riklet/src/crates/oci/src/: hash.rs  image.rs  image_manager.rs  lib.rs  skopeo.rs  umoci.rs
riklet/src/crates/shared/: Cargo.toml
riklet/src/crates/shared/src/: lib.rs  traits.rs  utils.rs
riklet/src/emitters/: metrics_emitter.rs
riktl/src/: main.rs
riktl/src/services/: instance_service.rs
scheduler/: Cargo.toml  Dockerfile  build.rs
scheduler/src/: config_parser.rs  controller.rs  lib.rs  main.rs
scheduler/src/grpc/: controller.rs  mod.rs  worker.rs
scheduler/src/state_manager/: lib.rs  mod.rs
sdn/main/src/: main.rs
