[package]
name = "controller"
version = "0.1.0"
authors = ["Malo <malo.polese@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.8.2"
chrono = "0.4"
colored = "2"
route-recognizer = "0.3.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

[dependencies.rusqlite]
version = "0.25.1"
features = ["bundled"]