[package]
name = "riklet"
version = "0.1.0"
authors = ["Thomas Gouveia <thomas.gouveia@etu.umontpellier.fr>", "Hugo Amalric <hugo.amalric@etu.umontpellier.fr>", "Sylvain Renaud <sylvain.reynaud@etu.umontpellier.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto = { path = "src/crates/proto", version = "0.1.0" }
cri = { path = "src/crates/cri" }
oci = { path = "src/crates/oci" }
shared = { path = "src/crates/shared" }
serde_json = "1.0.64"
daemonize = "0.4.1"
log = "0.4.14"
simple_logger = "1.11.0"
tonic = "0.4.3"
prost = "0.7.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.15"
serde = { version = "1.0", features = ["derive"] }
tokio-stream = "0.1.6"
async-trait = "0.1.50"
snafu = "0.6.10"
libc="0.2.97"
toml="0.5.8"
uuid = { version = "0.8", features = ["v4"] }

