[package]
name = "rik-scheduler"
version = "0.1.0"
authors = ["Protocole <burgoni.alexandre@protonmail.com>"]
edition = "2018"

[dependencies]
tonic = "0.4.3"
tokio = { version = "1.6.1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.6"
env_logger = "0.8.3"
log = "0.4.14"
proto = { path = "../proto", version="0.1.0" }
