[package]
name = "rik-scheduler"
version = "0.1.0"
authors = ["Protocole <burgoni.alexandre@protonmail.com>"]
edition = "2018"

[package.metadata.deb]
depends = "$auto, systemd"
extended-description = "rik scheduler daemon"
section = "admin"
priority = "optional"
assets = [
    ["target/release/rik-scheduler", "usr/bin/rik-scheduler", "755"],
    ["service/rik-scheduler.service", "/lib/systemd/system/rik-scheduler.service", "644"],
]

[dependencies]
tonic = "0.4.3"
tokio = { version = "1.6.1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.6"
env_logger = "0.8.3"
log = "0.4.14"
proto = { git = "https://github.com/AlexandreBrg/rik", branch = "protolib", version="0.1.3" }
# proto = { path = "../proto" }
rand = "0.8.4"
clap = "2.33.3"
# node-metrics = { git = "https://github.com/thomasgouveia/rik", branch = "node-metrics" }
node_metrics = { path = "../node_metrics" }
serde = "1.0.126"
serde_json = "1.0.64"
